--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
-    "basic-ftp": "^5.0.5"
+    "axios": "^1.4.0"
   },
   "devDependencies": {
 		"@babel/core": "^7.12.16",
